--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <div id="root"></div>
 <script type="module" src="/src/main.tsx"></script>
 <script src="https://js.tosspayments.com/v2/standard"></script>
-<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"></script>
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" defer></script>
 </body>
 </html>
